--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -65,6 +65,7 @@ button:hover {
 #network,
 #mode,
 #custom-keyboard,
+#custom-power,
 #scratchpad {
   margin-top: 2px;
   margin-bottom: 2px;
@@ -153,4 +154,19 @@ button:hover {
 #custom-keyboard {
   color: @peach;
   border-bottom: 2px solid @peach;
+}
+
+#custom-power {
+  padding-right: 8px;
+  color: @sapphire;
+  border-top: 2px solid @sapphire;
+}
+
+menu {
+  border-radius: 15px;
+  background: #161320;
+  color: #b5e8e0;
+}
+menuitem {
+  border-radius: 15px;
 }
