--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,4 +1,4 @@
-@import "mocha.css";
+@import "colors.css";
 
 * {
   font-family: "JetBrainsMono Nerd Font", monospace;
@@ -65,6 +65,7 @@ button:hover {
 #network,
 #mode,
 #custom-keyboard,
+#custom-weather,
 #custom-power,
 #scratchpad {
   margin-top: 2px;
@@ -154,6 +155,11 @@ button:hover {
 #custom-keyboard {
   color: @peach;
   border-bottom: 2px solid @peach;
+}
+
+#custom-weather {
+  color: @text;
+  border-bottom: 2px solid @text;
 }
 
 #custom-power {
