--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -174,6 +174,11 @@ button:hover {
   border-bottom: 2px solid @text;
 }
 
+#custom-airplane {
+  color: @text;
+  border-bottom: 2px solid @text;
+}
+
 menu {
   border-radius: 15px;
   background: #161320;
