style: airplane mode

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -67,6 +67,7 @@ button:hover {
 #custom-keyboard,
 #custom-weather,
 #custom-notification,
+#custom-airplane,
 #custom-power,
 #scratchpad {
   margin-top: 2px;
