--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -2,57 +2,43 @@
 
 * {
   font-family: "JetBrainsMono Nerd Font", monospace;
-  font-size: 14px;
+  font-size: 12px;
   min-height: 0;
   font-weight: bold;
 }
 
 window#waybar {
-  background: rgba(17, 17, 27, 0.4);
+  background: rgba(17, 17, 27, 0.05);
   color: @overlay0;
-}
-
-#window {
-  margin: 8px;
-  padding-left: 8;
-  padding-right: 8;
-}
-
-button {
-  box-shadow: inset 0 -3px transparent;
-  border: none;
-  border-radius: 0;
-}
-
-button:hover {
-  background: inherit;
-  color: @mauve;
-  border-top: 2px solid @mauve;
+  padding: 4px 6px;
+  border-radius: 6px;
 }
 
 #workspaces button {
-  padding: 0 4px;
+  padding: 1px 4px;
+  margin: 0 1px;
+  border-radius: 3px;
+  background: rgba(255, 255, 255, 0.08);
 }
 
 #workspaces button.focused {
-  background-color: rgba(0, 0, 0, 0.3);
-  color: @rosewater;
-  border-top: 2px solid @rosewater;
+  background: @rosewater;
+  color: #1a1b26;
 }
 
 #workspaces button.active {
-  background-color: rgba(0, 0, 0, 0.3);
-  color: @mauve;
-  border-top: 2px solid @mauve;
+  background: @mauve;
+  color: #1a1b26;
 }
 
 #workspaces button.urgent {
-  background-color: #eb4d4b;
+  background: #eb4d4b;
+  color: #fff;
 }
 
-#pulseaudio,
 #clock,
-#memory,
+#pulseaudio,
+#network,
 #battery,
 #cpu,
 #memory,
@@ -62,7 +48,6 @@ button:hover {
 #backlight,
 #wireplumber,
 #tray,
-#network,
 #mode,
 #custom-keyboard,
 #custom-weather,
@@ -70,121 +55,91 @@ button:hover {
 #custom-airplane,
 #custom-power,
 #scratchpad {
-  margin-top: 2px;
-  margin-bottom: 2px;
-  margin-left: 4px;
-  margin-right: 4px;
-  padding-left: 4px;
-  padding-right: 4px;
+  margin: 0 4px;
+  padding: 2px 7px;
+  border-radius: 3px;
+  background: rgba(255, 255, 255, 0.12);
+  transition: all 0.2s ease;
+}
+
+#clock:hover,
+#pulseaudio:hover,
+#network:hover,
+#battery:hover,
+#cpu:hover,
+#memory:hover,
+#bluetooth:hover,
+#disk:hover,
+#temperature:hover,
+#backlight:hover,
+#custom-keyboard:hover,
+#custom-weather:hover,
+#custom-notification:hover,
+#custom-airplane:hover,
+#custom-power:hover {
+  background: rgba(255, 255, 255, 0.2);
 }
 
 #clock {
   color: @maroon;
-  border-bottom: 2px solid @maroon;
 }
-
-#clock.date {
-  color: @mauve;
-  border-bottom: 2px solid @mauve;
-}
-
 #pulseaudio {
   color: @blue;
-  border-bottom: 2px solid @blue;
 }
-
 #network {
   color: @yellow;
-  border-bottom: 2px solid @yellow;
+}
+#battery {
+  color: @green;
+}
+#backlight {
+  color: @lavender;
+}
+#bluetooth {
+  color: @sky;
+}
+#memory {
+  color: @text;
+}
+#temperature {
+  color: @red;
+}
+#cpu {
+  color: @rosewater;
+}
+#custom-keyboard {
+  color: @peach;
+}
+#custom-weather {
+  color: @text;
+}
+#custom-power {
+  color: @sapphire;
+}
+#custom-notification {
+  color: @text;
+}
+#custom-airplane {
+  color: @text;
 }
 
 #idle_inhibitor {
   margin-right: 12px;
+  border-radius: 3px;
+  padding: 2px 7px;
+  background: rgba(255, 255, 255, 0.12);
   color: #7cb342;
 }
-
 #idle_inhibitor.activated {
   color: @red;
 }
 
-#battery {
-  color: @green;
-  border-bottom: 2px solid @green;
-}
-
-#backlight {
-  color: @lavender;
-  border-bottom: 2px solid @lavender;
-}
-
-#bluetooth {
-  color: @sky;
-  border-bottom: 2px solid @sky;
-}
-
-#memory {
-  color: @text;
-  border-bottom: 2px solid @text;
-}
-
-#temperature {
-  color: @red;
-  border-bottom: 2px solid @red;
-}
-
-#cpu {
-  color: @rosewater;
-  border-bottom: 2px solid @rosewater;
-}
-
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
-  margin-left: 0;
-}
-
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
-  margin-right: 0;
-}
-
-#custom-vpn {
-  color: @lavender;
-  border-radius: 15px;
-  padding-left: 6px;
-  padding-right: 6px;
-}
-
-#custom-keyboard {
-  color: @peach;
-  border-bottom: 2px solid @peach;
-}
-
-#custom-weather {
-  color: @text;
-  border-bottom: 2px solid @text;
-}
-
-#custom-power {
-  padding-right: 8px;
-  color: @sapphire;
-  border-top: 2px solid @sapphire;
-}
-
-#custom-notification {
-  color: @text;
-  border-bottom: 2px solid @text;
-}
-
-#custom-airplane {
-  color: @text;
-  border-bottom: 2px solid @text;
-}
-
 menu {
-  border-radius: 15px;
-  background: #161320;
+  border-radius: 6px;
+  background: rgba(22, 19, 32, 0.95);
   color: #b5e8e0;
 }
 menuitem {
-  border-radius: 15px;
+  border-radius: 3px;
+  padding: 4px 10px;
 }
